test/libsolidity/syntaxTests/nameAndTypeResolution/341_rational_bitand_binary_operation.sol
contract test {
    function f() public {
        fixed(1.75) & 3;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
